Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-5051

[GLib][Gandiva] Test failure in release verification script

    XMLWordPrintableJSON

Details

    Description

      I got this:

           23:   end
           24: 
           25:   def test_value
        => 26:     assert_equal(@value, @node.value)
           27:   end
           28: 
           29:   def test_return_type
      /tmp/arrow-0.13.0.NUWtu/apache-arrow-0.13.0/c_glib/test/gandiva/test-string-literal-node.rb:26:in `test_value'
      <"Hello"> expected but was
      <"\u0010Ұ6q">
      Failure: test_value(TestGandivaStringLiteralNode)
      

      When running the verification script:

      ./dev/release/verify-release-candidate.sh source 0.13.0 4
      

      The value displayed above looks like corrupted memory...

      Attachments

        Issue Links

          Activity

            People

              kou Kouhei Sutou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 0.5h
                  0.5h