ARROW-5051: [GLib][Gandiva] Don't return temporary memory

Author: Kouhei Sutou <kou@clear-code.com>

Closes #4071 from kou/glib-gandiva-fix-string-literal-node-value and squashes the following commits:

4a1811b8 <Kouhei Sutou>  Don't return temporary memory